--- a/ead-authuser-service.yaml
+++ b/ead-authuser-service.yaml
@@ -40,6 +40,18 @@ ead:
     exchange:
       userEvent: ead.userevent
 
+authuser:
+  refreshscope:
+    name: Refresh Scope test
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - refresh
+        - health
+
 resilience4j:
   circuitbreaker:
     instances:
