--- a/ead-authuser-service-dev.yaml
+++ b/ead-authuser-service-dev.yaml
@@ -27,9 +27,9 @@ spring:
 
 logging:
   level:
-    com.ewertonilima: TRACE
+    com.ewertonilima: INFO
     root: INFO
-    org.springframework.web: DEBUG
+    org.springframework.web: INFO
     org.hibernate: INFO
 
 ead:
